adapt.js is now loaded last of all and dynamically so as to not to have to faff around wrapping it in an initialiser. maybe fix on a rainy day.

--- a/app/webroot/css/thermal-age-wizard.css
+++ b/app/webroot/css/thermal-age-wizard.css
@@ -73,7 +73,7 @@
 
     display: block;
 
-    z-index: 200 !important;
+    z-index: 201 !important;
     margin: 0px;
     padding: 0px;
     padding-right: 3px;
@@ -94,6 +94,7 @@
 
 .mobile-layout #wizardDetailColumn {
     position: absolute;
+    display: block;
     float: none;
     
 }
